fix: fixed styles (word wrap with very long length). Added an image loader

--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -19,11 +19,12 @@
 .infoWrapper {
   display: flex;
   align-items: flex-start;
+  margin-bottom: 25px;
 }
 
 .articleInfo {
   display: flex;
-  width: 70%;
+  width: 80%;
   flex-direction: column;
   margin-right: auto;
 }
@@ -31,13 +32,20 @@
 .title {
   display: flex;
   gap: 15px;
-  margin-bottom: 10px
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .titleText {
-  margin: 0;
+  max-width: 92%;
   font-size: 22px;
   color: #1890FF;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .likeBtn {
@@ -68,17 +76,27 @@
   padding: 5px;
   border: 1px solid grey;
   border-radius: 3px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .description {
   color: gray;
-  margin-bottom: 20px;
+  margin-top: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
 }
 
 .userInfo {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
+  gap: 15px;
 }
 
 .userName {
@@ -94,9 +112,8 @@
   height: 45px;
   border-radius: 50%;
   object-fit: cover;
-  margin-left: 15px;
 }
 
 .articleBody {
-  // 
+  overflow-wrap: break-word;
 }
