--- a/src/components/LoaderSpinner/LoaderSpinner.module.scss
+++ b/src/components/LoaderSpinner/LoaderSpinner.module.scss
@@ -1,7 +1,6 @@
 .loaderSpinner {
-  width: 40px;
-  height: 40px;
-  margin-right: 30px;
+  width: 45px;
+  height: 45px;
   border: 5px solid #2196F3;
   border-bottom-color: transparent;
   border-radius: 50%;
@@ -22,8 +21,11 @@
 
 .loaderContainer {
   display: flex;
-  margin-bottom: 20px;
   align-items: center;
   justify-content: center;
   color: #4A4A4A;
+}
+
+.text {
+  margin-left: 20px;
 }
